Добавил роли и конфигурацию секьюрити