@@ -1,12 +1,10 @@
 package com.vladislav.fedoseev.SpringSecurityBasicAuthFormAuthJWT.rest;
 
 import com.vladislav.fedoseev.SpringSecurityBasicAuthFormAuthJWT.model.Developer;
-import org.springframework.web.bind.annotation.GetMapping;
-import org.springframework.web.bind.annotation.PathVariable;
-import org.springframework.web.bind.annotation.RequestMapping;
-import org.springframework.web.bind.annotation.RestController;
+import org.springframework.web.bind.annotation.*;
 
 import java.util.List;
+import java.util.stream.Collectors;
 import java.util.stream.Stream;
 
 @RestController
@@ -17,7 +15,7 @@ public class DeveloperRestControllerV1 {
             new Developer(1L, "Ivan", "Ivanov"),
             new Developer(2L, "Sergey", "Sergeev"),
             new Developer(3L, "Petr", "Petrov")
-    ).toList();
+    ).collect(Collectors.toList());
 
     @GetMapping
     public List<Developer> getAll() {
@@ -28,6 +26,18 @@ public class DeveloperRestControllerV1 {
     public Developer getById(@PathVariable Long id) {
         return DEVELOPERS.stream().filter(developer -> developer.getId().equals(id))
                 .findFirst().orElse(null);
+    }
+
+    @PostMapping
+    public Developer create(@RequestBody Developer developer) {
+        this.DEVELOPERS.add(developer);
+        return developer;
+    }
+
+    @DeleteMapping("/{id}")
+    public List<Developer> deleteById(@PathVariable Long id) {
+        this.DEVELOPERS.removeIf(developer -> developer.getId().equals(id));
+        return DEVELOPERS;
     }
 
 }
